--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,23 @@
 # Change Log
 
-## [0.0.1] - 2016-05-20
-### Added
- 
-  *Black Api*
+All notable changes to this project will be documented in this file.
+This project adheres to [Semantic Versioning](http://semver.org/).
 
-  
+
+
+## [Unreleased]
+
+### Added
+
+
+## [0.0.2] - 2016-05-20
+
+### Added
+
+ - Defines `td` variable.
+ - Get version of the package in `td.version`.
+
+
+
+[Unreleased]: https://github.com/JonDotsoy/td-polyfill/compare/v0.0.2...HEAD
+[0.0.2]: https://github.com/JonDotsoy/td-polyfill/compare/bf03781416bf21a4dc0e43bd2ea602896b65ae66...v0.0.2
